[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ahead"
#authors = [
#    {author = "phunc20", email = "wucf20@gmail.com"},
#]
version = "0.0.1"
license = {text = "MIT"}
requires-python = "==3.8"
dependencies = [
    "FlowCal >= 1.3.0",
]
readme = "README.md"
[project.optional-dependencies]
#eval = ["rapidfuzz >= 2.13.1", "Unidecode >= 1.3.6"]

[tool.setuptools.packages.find]
where = ["ahead"]
#include = ["pkg*"]
#exclude = ["additional*"]
#namespaces = false
